# finetuner

./: .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  DATASET_DETECTION.md  PRD.md  ROADMAP.md  TEAM.md  TEST_PLAN.md  UX_DESIGN.md
examples/: alpaca_sample.jsonl  dpo_sample.jsonl  sharegpt_sample.jsonl
finetuner/: __init__.py  app.py
finetuner/core/: codegen.py  data.py  detector.py  engine.py  export.py  jobs.py  models.py  recipes.py  registry.py  state.py  training.py
finetuner/ui/: tab_dataset.py  tab_export.py  tab_model.py  tab_monitor.py  tab_playground.py  tab_train.py
fused_model/: README.md
scripts/: card_gguf_addendum.md  gui_drive_turkish_sft.py  gui_export_test.py  gui_playground_test.py  smoke_sft.py  supervised_upload.sh  train_turkish_full.py  upload_to_hub.py
tests/: test_codegen.py  test_detector.py  test_engine.py  test_jobs.py  test_recipes.py
