[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "finetuner"
version = "0.1.0"
description = "Finetuner Studio — a low-code GUI platform for fine-tuning LLMs, VLMs, TTS, STT, OCR and embedding models on Apple Silicon, powered by mlx-tune."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Aykut Çayır" }]
keywords = ["mlx", "fine-tuning", "lora", "apple-silicon", "llm", "gradio", "low-code"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "gradio>=5.0",
    "huggingface_hub>=0.26",
    "datasets>=3.0",
    "pandas>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
mlx = ["mlx-tune"]
audio = ["mlx-tune[audio]"]
dev = ["pytest>=8.0", "ruff>=0.6"]

[project.scripts]
finetuner = "finetuner.app:main"

[project.urls]
Repository = "https://github.com/aykutcayir34/finetuner"
"Backend library" = "https://github.com/ARahim3/mlx-tune"

[tool.hatch.build.targets.wheel]
packages = ["finetuner"]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
